<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".login.ForgotPasswordActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginStart="20dp"
        android:text="@string/enter_password_to_reset"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_label"
        android:layout_marginTop="20dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTint="@color/white"
            android:focusable="true"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:targetApi="m" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:background="@drawable/btn_background"
        android:drawablePadding="20dp"
        android:gravity="center"
        android:tag="custom_login_button"
        android:text="@string/sign_in"
        android:textColor="@color/white" />


</RelativeLayout>