<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/orders_list_view_item_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_10dp"
    android:layout_marginTop="@dimen/margin_8dp"
    android:layout_marginRight="@dimen/margin_10dp"
    android:layout_marginBottom="@dimen/margin_8dp"
    custom:cardCornerRadius="0dp"
    custom:cardElevation="@dimen/margin_3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffffff"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:text="@string/ordered_on"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size_12sp" />

                <TextView
                    android:id="@+id/orders_list_view_item_ordered_on_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:layout_marginBottom="@dimen/margin_10dp"
                    android:paddingLeft="@dimen/margin_5dp"
                    android:paddingRight="@dimen/margin_5dp"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size_12sp" />
            </LinearLayout>

            <View
                android:layout_width=".5dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_5dp"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:background="#979797" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:text="@string/items"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size_12sp" />

                <TextView
                    android:id="@+id/orders_list_view_item_total_items_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:layout_marginBottom="@dimen/margin_10dp"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size_12sp" />
            </LinearLayout>

            <View
                android:layout_width=".5dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_5dp"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:background="#979797" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:text="@string/grand_total"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size_12sp" />

                <TextView
                    android:id="@+id/orders_list_view_item_total_price_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:layout_marginBottom="@dimen/margin_10dp"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size_12sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:layout_margin="@dimen/margin_10dp"
            android:background="#979797" />

        <LinearLayout
            android:id="@+id/orders_list_view_item_line_items_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_marginRight="@dimen/margin_10dp"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="11"
                android:text="@string/shipment"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_12sp" />

            <TextView
                android:id="@+id/orders_list_view_item_shipment_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="right"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_marginRight="@dimen/margin_10dp"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="11"
                android:text="@string/tax"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_12sp" />

            <TextView
                android:id="@+id/orders_list_view_item_tax_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="right"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_12sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_marginRight="@dimen/margin_10dp"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/orders_list_view_item_order_number_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_number"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_12sp" />

            <TextView
                android:id="@+id/orders_list_view_item_order_number_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/orders_list_view_item_order_number_label"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_12sp" />

            <TextView
                android:id="@+id/orders_list_view_item_shipment_status_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:gravity="right"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_12sp" />

            <TextView
                android:id="@+id/orders_list_view_item_shipment_status_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/orders_list_view_item_shipment_status_txt"
                android:text="@string/shipment_status"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_12sp" />
        </RelativeLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>